<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroung"
    android:orientation="vertical">

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:text="@string/LoginTitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawableRight="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/FirstName"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawableRight="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/LastName"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#0F9A9A"
        android:backgroundTint="#8248E8"
        android:text="@string/Login"
        android:textColor="#F1EAEA"
        android:textSize="15dp"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

</LinearLayout>